fix: align remove action for a reminder item

--- a/src/app/components/reminder-item/reminder-item.component.scss
+++ b/src/app/components/reminder-item/reminder-item.component.scss
@@ -43,6 +43,6 @@
     color: $secondary-text-color;
     font-weight: bold;
     font-size: 13px;
-    padding: 0 10px;
+    padding: 10px;
   }
 }
